--- a/currencykt/docker-compose.yml
+++ b/currencykt/docker-compose.yml
@@ -1,8 +1,18 @@
 version: "2.4"
+
+networks:
+  jhhgjg:
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.21.0.0/16
+          gateway: 172.21.0.1
 services:
   postgres-currency:
     image: postgres:latest
     mem_limit: 1024m
+    networks:
+      - jhhgjg
     ports:
       - "5433:5432"
     environment:
@@ -12,7 +22,7 @@ services:
       - C:/logs/postgres-currency:/var/lib/postgresql/data
   # hostname
   currency-converter:
-    image: currency:1.0.0
+    image: currency:1.0.5
     #### ! ####
     mem_limit: 512m
     # environment variables
@@ -30,3 +40,10 @@ services:
     depends_on:
       - postgres-currency
     restart: always
+  angular-frontend:
+     image: angular-currency:1.0.0
+     ports:
+       - "4200:80"
+     volumes:
+       - ./nginx.conf:/etc/nginx/nginx.conf
+     restart: always
